# GAMES202

./: .gitignore  CMakeLists.txt  README.en.md  README.md
1.Environment-Setup/: CMakeLists.txt  main.cpp
2.Simple-Rasterizer/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.hpp
3.Z-buffering/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
4.Pipeline-and-Shading/: CMakeLists.txt  Shader.hpp  Texture.hpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
5.Bezier-Curves/: CMakeLists.txt  main.cpp
6.The-light-intersects-the-triangle/: CMakeLists.txt  Renderer.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  global.hpp
6.The-light-intersects-the-triangle/images/: binary.ppm
7.Whitted-Style-Ray-Tracing-and-Bounding-Volume-Hierarchy/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  main.cpp
7.Whitted-Style-Ray-Tracing-and-Bounding-Volume-Hierarchy/images/: binary.ppm
8.Path-Tracing/: AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Material.hpp  OBJ_Loader.hpp  Object.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
9.Spring-mass/src/: mass.h  rope.cpp
Assignment0/: index.html
Assignment0/src/: engine.js
Assignment0/src/materials/: Material.js  PhongMaterial.js
Assignment0/src/renderers/: MeshRender.js  WebGLRenderer.js
Assignment0/src/shaders/lightShader/: vertex.vs
Assignment0/src/shaders/phongShader/: fragment.fs  vertex.vs
Assignment1/homework1/: index.html
Assignment1/homework1/src/: engine.js
Assignment1/homework1/src/lights/: DirectionalLight.js  PointLight.js
Assignment1/homework1/src/loads/: loadOBJ.js  loadShader.js
Assignment1/homework1/src/materials/: Material.js  PhongMaterial.js  (+1 more)
Assignment2/: README.md
Assignment2/homework2/: index.html
Assignment2/homework2/src/: engine.js
Assignment2/prt/: CMakeLists.txt
Assignment2/prt/scenes/: prt.exr  prt.xml
Assignment2/prt/src/: prt.cpp
Assignment3/: README.md  index.html
Assignment3/lib/: three.js
Assignment3/src/: engine.js
Assignment3/src/lights/: DirectionalLight.js
Assignment3/src/loads/: loadGLTF.js
Assignment3/src/materials/: GBufferMaterial.js  Material.js  SSRMaterial.js  SceneDepthDebugMaterial.js  SceneDepthMaterial.js
Assignment3/src/renderers/: MeshRender.js  WebGLRenderer.js
Assignment3/src/textures/: FBO.js
Assignment4/: README.md
Assignment4/homework4/: index.html
Assignment4/homework4/src/: IBL.js  engine.js
Assignment4/lut-gen/: CMakeLists.txt  Eavg_IS.cpp  Eavg_MC.cpp  Emu_IS.cpp  Emu_MC.cpp
Assignment5/: CMakeLists.txt  README.md
Assignment5/src/: .editorconfig  denoiser-svgf.cpp  denoiser.cpp  denoiser.h  main.cpp
Assignment5/src/util/: buffer.h  image.cpp  mathutil.h
(+65 files in other folders)
